# from-scratch-foundations

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tree.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  experiment-benchmark.yml  feature-code.yml  study-notes.yml  weekly-plan.yml
.github/workflows/: docs.yml
deep-learning/: index.html
docs/: index.md
docs/includes/: abbreviations.md
docs/javascripts/: katex.js
docs/nlp-llms/: index.md
docs/nlp-llms/transformers/: embeddings-block.md  index.md  learned-positional-embeddings.md  positional-encoding-implementation.md  positional-encoding.md  testing-numerics.md
docs/reinforcement-learning/: index.md
dsa/: index.html
examples/: embeddings_demo.py
includes/abbreviations/: index.html
javascripts/: katex.js
math/: index.html
nlp-llms/: index.html
nlp-llms/transformers/: index.html
nlp-llms/transformers/embeddings-block/: index.html
nlp-llms/transformers/learned-positional-embeddings/: index.html
nlp-llms/transformers/positional-encoding/: index.html
nlp-llms/transformers/positional-encoding-implementation/: index.html
nlp-llms/transformers/testing-numerics/: index.html
projects/transformer/: positional_encoding.py
projects/transformer/utils/: seed.py
reinforcement-learning/: index.html
search/: search_index.json
src/: masks.py
src/foundations/: __init__.py
src/foundations/cli/: __init__.py  notes.py  projects.py
src/foundations/dl/: ch03_shallow_nn_demo.py  ch04_mini_experiment.ipynb  ch04_mini_experiment.py
src/foundations/math/: ch01_sanity_demo.ipynb  ch01_sanity_demo.py  ch03_linear_systems_demo.py
src/foundations/projects/: __init__.py
src/foundations/utils/: __init__.py
stylesheets/: extra.css
tests/: test_cli_smoke.py  test_seed.py
tests/unit/transformer/: test_attention.py  test_embeddings.py  test_masks.py
tests/unit/trasnformer/: test_positional_encoding.py
(+22 files in other folders)
