[project]
name = "from-scratch-foundations"
version = "0.1.0"
description = "Public from-scratch foundations monorepo/workbench (code + experiments + notes + Anki)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "typer>=0.12",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "loguru>=0.7",
    "rich>=13.9",
    "torch>=2.10.0",
    "lightning>=2.6.1",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.5",
    "mlflow>=2.16",
]

dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pre-commit>=3.8",
    "ty>=0.0.1a6",
]

docs = [
    "mkdocs-material>=9.5",
    "mkdocs-minify-plugin>=0.8",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-awesome-pages-plugin>=2.9",
    "pymdown-extensions>=10.11",
]

[project.scripts]
foundations = "foundations.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foundations"]

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["foundations"]

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

# ── ty ───────────────────────────────────────────────────────────────────────
[tool.ty.environment]
root = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]
